assets/public/css/styles.css
/* ... */
.hidden {
  display: none !important;
  visibility: hidden;
}

/* Contact box */
#section-contact {
font:0.8em/150% "lucida grande", "lucida sans unicode", lucida, helvetica, arial, sans-serif;
width:400px;
background:white;
padding:5px 10px;
border-radius: 10px;
-moz-border-radius: 10px;
-webkit-border-radius: 10px;
}
#section-contact label {
display:block;
font:bold 1.1em/150% helvetica, arial, sans-serif;
color:#000;
}
#section-contact input,
#section-contact textarea {
width:390px;
border:1px solid #CCC;
font:1em/150% "lucida grande", "lucida sans unicode", lucida, helvetica, arial, sans-serif;
padding:5px;
margin:0 0 10px 0;
}
#section-contact #contact-submit {
display: block;
text-align:center;
font:bold 1.1em/150% helvetica, arial, sans-serif;
-moz-border-radius: 10px;
-webkit-border-radius: 10px;
background:#990000;
color:#FFF;
cursor:pointer;
border:0!important;
width:100%;
padding-top: 5px;
padding-bottom: 5px;
text-decoration:none;
margin-top:10px;
}
#section-contact #contact-submit:hover {
background:#CC0000;
}
#section-contact small a {
display:block;
text-align:center;
text-decoration:none;
color:#666;
}
#section-contact small a:hover {
color:#333;
}
#contact-name-error,
#contact-email-error,
#contact-comments-error {
margin:-10px 0 10px 0;
color:#CC0000;
font-size:0.85em;
}
#contact-thanks {
padding:5px;
}

/* Modal popup */
#simplemodal-overlay {background-color:#000;}
#simplemodal-container {}

/* DVD Logo */
#logo a span {
display:none;
}
#logo a {
display:block;
width: 100%;
height:95px;
background:url(../img/logo.png) center no-repeat;
margin:0 0 15px 0;
}
#logo a#logo-splash {
background:url(../img/logo-top.png) center no-repeat;    
}

/* S I D E B A R */
#sidebar {
background:#171717 url(../img/logo-bottom.png) center bottom no-repeat;
width:175px;
min-height:100%;
height:100%;
position:fixed;
color:white;
}
#sidebar-sorters fieldset {
border:0;
margin:0;
padding:0;
background:#171717;
}
#sidebar-sorters fieldset legend {
padding:5px 0;
margin:0;
font:bold 1.1em/100% helvetica, arial, sans-serif;
letter-spacing:-1px;
border-bottom:1px dotted #424242;
text-align:center;
color:#CCC;
width:100%;
cursor:pointer;
background:#171717;
}
#sidebar-sorters fieldset legend:hover {
color:#FFF;
cursor:pointer;
}
#sidebar-sorters div {
margin-bottom:15px;
font:0.7em/100% "lucida grande", "lucida sans unicode", lucida, helvetica, arial, sans-serif;
color:#999;
}

/* Gene Letters */
#sidebar-sorters-alphabet table {
width:100%;
border-collapse:collapse;
background:#171717;
}
#sidebar-sorters-alphabet table tr td {
font:bold 1.2em/200% helvetica, arial, sans-serif;
text-transform:uppercase;
color:#333;
text-align:center;
width:12.5%;
border-right:1px solid #333;
border-bottom:1px solid #333;
}
#sidebar-sorters-alphabet table tr td.side-right {
border-right:0;
}
#sidebar-sorters-alphabet table tr td.side-bottom {
border-bottom:0;
}
#sidebar-sorters-alphabet table tr td a {
display:block;
width:100%;
height:100%;
text-decoration:none;
color:#999;
}
#sidebar-sorters-alphabet table tr td a:hover {
background:#FF0000;
color:#FFF;
}
#sidebar-sorters-alphabet table tr td a.active-letter {
background:#CC0000;
color:white;
}

/* Information */
#sidebar-sorters-information {
padding:10px 0 0 0;
}
#sidebar-sorters-information ul {
margin:0;
padding:0;
}
#sidebar-sorters-information ul li {
line-height:150%;
}
#sidebar-sorters-information ul li a {
display:block;
padding:0 0 0 15px;
margin:0 0 0 5px;
text-decoration:none;
color:#999;
}
#sidebar-sorters-information ul li a:hover {
color:#FF6600;
background:url(../img/misc-bullet.png) center left no-repeat!important;
}

/* Glossary */
#sidebar-sorters-glossary dl {
font:1em/140% "lucida grande", "lucida sans unicode", lucida, helvetica, arial, sans-serif;
padding:10px 10px 0 10px;
margin:0;
}
#sidebar-sorters-glossary dt {
font-weight:bold;
color:#FFF;
}
#sidebar-sorters-glossary dd {
margin:0 0 10px 10px;
color:#999;
}

/* Version */
#sidebar-version {
text-align:center;
margin:15px 0 0 0 !important;
position:absolute;
bottom:3px;
}
#sidebar-version li {
font:0.85em/140% "lucida grande", "lucida sans unicode", lucida, helvetica, arial, sans-serif;
color:#666;
list-style-type:none;
margin:0 0 0 10px;
}

/* TODO create overlay */
#loading-modal-container {
  position: relative;
  height: 100%;
}
#loading-overlay {
  position: absolute;
  top: 0px;
  left: 0px;
  background: black;
  width:100%;
  height:100%;
  z-index: 1000;
  background-color: rgba(0,0,0,0.0);
  -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
          border-radius: 10px;
}
#loading-modal {
  width: 150px;
  height: 40px;
  margin-left: auto;
  margin-right: auto;
  margin-top: 10px;
  padding: 10px;
  background-color: red;
  text-align: center;
  z-index: 1001;
  background-color: rgba(0,0,0,0.2);
  -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
          border-radius: 10px;
}
/* M U T A T I O N   T A B L E S */
#mutation-tables {
margin-left:1px;
padding:10px 0 10px 0;
}

/* Fieldset container */
#mutation-tables fieldset {
border:0;
padding:5px 0 10px 3px;
}
#mutation-tables fieldset legend {
font:1.5em/100% helvetica, arial, sans-serif;
color:#FF0000;
cursor:pointer;
width:99%;
background:url(../img/legend-collapsible-back.png) center left no-repeat !important;
}
#mutation-tables fieldset legend strong {
background:#FFF;
margin-left:25px;
font-size: 24px;
}
#mutation-tables fieldset legend:hover {
color:#FF6600;
}
#mutation-tables fieldset legend.collapsed {
background:url(../img/legend-collapsed-back.png) center left no-repeat !important;
}
#mutation-tables fieldset legend.collapsed:hover {
color:#FF3300;
}
#mutation-tables fieldset legend span {
float:right;
font:normal 9.6px/100% "lucida grande", "lucida sans unicode", lucida, helvetica, arial, sans-serif;
margin:7px 0 0 0;
background:white;
}
#mutation-tables fieldset legend span a {
text-decoration:none;
color:#999;
padding:0 3px;
border: 0px;
}
/* ... */

